<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalcActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calc_page_title"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@color/calc_background"
        android:textColor="@color/calc_primary_color"
        android:letterSpacing="0.05"
        android:layout_marginVertical="10dp"/>

    <TextView
        android:id="@+id/calc_tv_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:layout_marginHorizontal="15dp"
        android:textSize="28sp"
        android:textColor="@color/calc_secondary_color"
        tools:text="0 / 1 ="/>

    <TextView
        android:id="@+id/calc_tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:layout_marginHorizontal="15dp"
        android:textSize="52sp"
        android:textStyle="bold"
        android:textColor="@color/calc_primary_color"
        tools:text="inf"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:layout_marginVertical="5dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/calc_btn_percent"
                android:text="@string/calc_btn_percent"
                style="@style/calc_operation_btn"/>
            <Button
                android:id="@+id/calc_btn_ce"
                android:text="@string/calc_btn_ce"
                style="@style/calc_operation_btn" />
            <Button
                android:id="@+id/calc_btn_c"
                android:text="@string/calc_btn_c"
                style="@style/calc_operation_btn"/>
            <Button
                android:id="@+id/calc_btn_backspace"
                android:text="@string/calc_btn_backspace"
                style="@style/calc_operation_btn" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"

            android:layout_height="0dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/calc_btn_inverse"
                android:text="@string/calc_btn_inverse"
                style="@style/calc_operation_btn"/>
            <Button
                android:id="@+id/calc_btn_square"
                android:text="@string/calc_btn_square"
                style="@style/calc_operation_btn" />
            <Button
                android:id="@+id/calc_btn_sqrt"
                android:text="@string/calc_btn_sqrt"
                style="@style/calc_operation_btn"/>
            <Button
                android:id="@+id/calc_btn_divide"
                android:text="@string/calc_btn_divide"
                style="@style/calc_operation_btn" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"

            android:layout_height="0dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/calc_btn_7"
                android:text="@string/calc_btn_7"
                style="@style/calc_digit_btn"/>
            <Button
                android:id="@+id/calc_btn_8"
                android:text="@string/calc_btn_8"
                style="@style/calc_digit_btn" />
            <Button
                android:id="@+id/calc_btn_9"
                android:text="@string/calc_btn_9"
                style="@style/calc_digit_btn"/>
            <Button
                android:id="@+id/calc_btn_multiply"
                android:text="@string/calc_btn_multiply"
                style="@style/calc_operation_btn" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/calc_btn_4"
                style="@style/calc_digit_btn"
                android:text="@string/calc_btn_4" />

            <Button
                android:id="@+id/calc_btn_5"
                style="@style/calc_digit_btn"
                android:text="@string/calc_btn_5" />

            <Button
                android:id="@+id/calc_btn_6"
                style="@style/calc_digit_btn"
                android:text="@string/calc_btn_6" />

            <Button
                android:id="@+id/calc_btn_minus"
                style="@style/calc_operation_btn"
                android:text="@string/calc_btn_minus" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"

            android:layout_height="0dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/calc_btn_1"
                android:text="@string/calc_btn_1"
                style="@style/calc_digit_btn"/>
            <Button
                android:id="@+id/calc_btn_2"
                android:text="@string/calc_btn_2"
                style="@style/calc_digit_btn" />
            <Button
                android:id="@+id/calc_btn_3"
                android:text="@string/calc_btn_3"
                style="@style/calc_digit_btn"/>
            <Button
                android:id="@+id/calc_btn_plus"
                android:text="@string/calc_btn_plus"
                style="@style/calc_operation_btn" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"

            android:layout_height="0dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/calc_btn_pm"
                android:text="@string/calc_btn_pm"
                style="@style/calc_digit_btn"/>
            <Button
                android:id="@+id/calc_btn_0"
                android:text="@string/calc_btn_0"
                style="@style/calc_digit_btn" />
            <Button
                android:id="@+id/calc_btn_comma"
                android:text="@string/calc_btn_comma"
                style="@style/calc_digit_btn"/>
            <Button
                android:id="@+id/calc_btn_equal"
                android:text="@string/calc_btn_equal"
                style="@style/calc_equal_btn" />
        </TableRow>
    </TableLayout>
</LinearLayout>